HETS-811 fix misaligned local area dropdown on rental requests page

--- a/Client/src/sass/views/rental-requests.scss
+++ b/Client/src/sass/views/rental-requests.scss
@@ -1,11 +1,5 @@
 #rental-requests-list {
   #rental-requests-filters {
-    label {
-      margin-top: 7px;
-      margin-left: 10px;
-      float: left;
-    }
-
     > button {
       margin-left: 20px;
     }
